# nixos-config

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE.md  README.md  flake.nix  makefile  nixfmt.patch
.github/workflows/: main.yml
assets/: burpsuiteca.pem  character-replace.py
home/: default.nix
home/ai/: claude.nix  default.nix  mcp.nix  opencode.nix  plugins.nix
home/hyprland/: bindings.nix  default.nix  dunst.nix  events.nix  fusuma.nix  hyprgrass.nix  hyprpaper.nix  kanshi.nix  lock.nix  nwgbar.nix  rofi.nix  settings.nix  (+5 more)
modules/: agenix-utils.nix  gnome.nix  home.nix  hyprland.nix  network.nix  nix-optim.nix  nixos.nix  nixpkgs-cuda.nix  options.nix  remote-build.nix  stylix.nix  system.nix  utils.nix
overlays/: README.md  adwaita-hyrcursor.nix  brave.nix  default.nix  eza.nix  flameshot.nix  fonttools.nix  hyprgrass.nix  idea-local.nix  jetbrains-plugins.nix  kooha.nix  libcamera.nix  micro-wakatime.nix  monofur.nix  monofurx.nix  new-packages.nix  nwg-bar.nix  obsidian.nix  ranger.nix  rpl.nix  surface-control.nix  trashy.nix  waybar-hyprland-vdesk.nix  waybar.nix  xdg-desktop-portal-shana.nix  xdg-desktop-portal-termfilechooser.nix  xdph.nix
secrets/: README.md  default.nix  github-token.age  network-keys.age  nix-access-tokens.age  pingpov-env.age  secrets.nix  spotify.age  wakatime-key.age  wakatime-key.age.bak
shells/: cpp.nix  default.nix  java.nix  make-shells.nix  pwn.nix
templates/: default.nix
templates/python/: flake.nix  pyproject.toml
templates/python/src/my-package/: main.py
timers/: empty-trash.nix
(+112 files in other folders)
